@@ -1,1 +1,0 @@
-bluray_id: quick hack to get a unique identifer for a Blu-ray. A slimmed down and non-error-checking version of what bluray_backup uses.
